# rust-lmi-demo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  benchmark.py  loadtest.js  template.yaml
rust_app/: Cargo.toml
rust_app/src/: main.rs
src/: main.rs
