[package]
name = "rust-lmi-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "1.0.2"
serde = "1.0.136"
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
[patch.crates-io]
lambda_runtime = { git = "https://github.com/alessandrobologna/aws-lambda-rust-runtime", branch = "feat/concurrent-lambda-runtime" }
lambda_http = { git = "https://github.com/alessandrobologna/aws-lambda-rust-runtime", branch = "feat/concurrent-lambda-runtime" }
